# taurob_tracker_common

./: README.md  package.xml
launch/: xacrodisplay_common.launch  xacrodisplay_tracker_argonauts_tud.launch
meshes/: robot-complete-model.blend
robots/: tracker_argonauts_tud.urdf.xacro
taurob_arm_description/: CMakeLists.txt  package.xml
taurob_arm_description/meshes/: gripper_model.dae  tarm_link_0.stl  tarm_link_0_detailed.stl  tarm_link_1.stl  tarm_link_2.stl  tarm_link_3.stl  tarm_link_4.stl  tarm_link_4_old.stl  tarm_link_5.stl  tgripper_link_1.stl  tgripper_link_2.stl
taurob_arm_description/urdf/: taurob_arm.urdf.xacro.xml  taurob_arm_collision_geoms.urdf.xacro.xml  taurob_arm_collision_geoms_simple.urdf.xacro.xml  taurob_arm_macros.urdf.xacro.xml  taurob_arm_macros_with_error.urdf.xacro.xml
taurob_tracker_description/: CMakeLists.txt  package.xml
taurob_tracker_description/launch/: load_description.launch  spawn_gazebo_test.launch  xacrodisplay_common.launch  xacrodisplay_tracker_standalone.launch  xacrodisplay_tracker_with_arm.launch
taurob_tracker_description/meshes/: tracker_chassis.dae  tracker_chassis_no_tracks.dae  tracker_chassis_sides.dae
taurob_tracker_description/rviz/: xacrodisplay.rviz
taurob_tracker_description/urdf/: tracker.urdf.xacro  tracker_chassis.gazebo.xacro.xml  tracker_chassis.urdf.xacro.xml  tracker_chassis_cameras.urdf.xacro.xml  tracker_standalone.urdf.xacro  tracker_with_arm.urdf.xacro
urdf/: tracker_chassis.gazebo.xacro.xml  tracker_chassis.urdf.xacro.xml
