<?xml version="1.0"?>
<package>
  <name>taurob_tracker_description</name>
  <version>0.0.0</version>
  <description>The taurob_tracker_description package</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>
  
  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <license>LGPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_components_description</build_depend>
  <build_depend>hector_xacro_tools</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>hector_components_description</run_depend>
  <run_depend>hector_xacro_tools</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>

  </export>
</package>